Portado a primefaces info usuario y cambio pass

--- a/coplime_client_web/web/enviarAvisoIncidencia.xhtml
+++ b/coplime_client_web/web/enviarAvisoIncidencia.xhtml
@@ -17,7 +17,7 @@
             
             <ui:define name="botonesBarra">
                 <p:commandButton value="Ir al inicio" icon="back" action="#{Autenticador.goToIndex()}" />
-                <p:commandButton value="Seleccionar punto limpio" icon="back" action="#{enviarAvisoIncidenciaManagedBeans.goToSeleccionarPuntoLimpio()}" />
+                <p:commandButton value="Seleccionar punto limpio" icon="back" action="#{Autenticador.goToEnviarAvisoIncidencia()}" />
             </ui:define>
             
             <ui:define name="centro">
