--- a/coplime_client_web/web/selectPtoLimpioAviso.xhtml
+++ b/coplime_client_web/web/selectPtoLimpioAviso.xhtml
@@ -9,7 +9,7 @@
 
     <body>
 
-        <ui:composition template="./mainTemplate.xhtml">
+        <ui:composition template="/mainTemplate.xhtml">
 
             <ui:define name="titulo">
                 Seleccione un punto limpio
