--- a/coplime_client_web/web/index.xhtml
+++ b/coplime_client_web/web/index.xhtml
@@ -5,12 +5,11 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      contentType="text/html"
-      xmlns:ezcomp="http://java.sun.com/jsf/composite/ezcomp">
+      contentType="text/html">
 
     <body>
 
-        <ui:composition template="./mainTemplate.xhtml">
+        <ui:composition template="/mainTemplate.xhtml">
 
             <ui:define name="titulo">
                 Bienvenido a COPLIME
