--- a/coplime_client_web/web/users/infoUsuario.xhtml
+++ b/coplime_client_web/web/users/infoUsuario.xhtml
@@ -9,7 +9,7 @@
 
     <body>
 
-        <ui:composition template="../mainTemplate.xhtml">
+        <ui:composition template="/mainTemplate.xhtml">
 
             <ui:define name="titulo">
                 Información del usuario
