Mejorando el template
Se está comenzando a imitar los botones de la barra superior como em
mobile
Falta hacer un logo e icon para COPLIME

--- a/coplime_client_web/web/enviarAvisoIncidencia.xhtml
+++ b/coplime_client_web/web/enviarAvisoIncidencia.xhtml
@@ -16,8 +16,8 @@
             </ui:define>
             
             <ui:define name="botonesBarra">
-                <p:commandButton value="Ir al inicio" icon="back" action="#{Autenticador.goToIndex()}" />
-                <p:commandButton value="Seleccionar punto limpio" icon="back" action="#{Autenticador.goToEnviarAvisoIncidencia()}" />
+                <p:commandButton styleClass="btn-menu-superior" value="  " title="Ir al inicio" icon="back" action="#{Autenticador.goToIndex()}" />
+                <p:commandButton styleClass="btn-menu-superior" value="  " title="Seleccionar punto limpio" icon="back" action="#{Autenticador.goToEnviarAvisoIncidencia()}" />
             </ui:define>
             
             <ui:define name="centro">
