--- a/coplime_client_web/web/selectPtoLimpioAviso.xhtml
+++ b/coplime_client_web/web/selectPtoLimpioAviso.xhtml
@@ -16,7 +16,7 @@
             </ui:define>
             
             <ui:define name="botonesBarra">
-                <p:commandButton value="Ir al inicio" icon="back" action="#{Autenticador.goToIndex()}" />
+                <p:commandButton styleClass="btn-menu-superior" value="  " title="Ir al inicio" icon="back" action="#{Autenticador.goToIndex()}" />
             </ui:define>
             
             <ui:define name="centro">
