--- a/coplime_client_web/web/users/cambiarContrasegna.xhtml
+++ b/coplime_client_web/web/users/cambiarContrasegna.xhtml
@@ -16,7 +16,7 @@
             </ui:define>
             
             <ui:define name="botonesBarra">
-                <p:commandButton value="Ir al inicio" action="#{Autenticador.indexLoggued()}" />
+                <p:commandButton styleClass="btn-menu-superior" value="  " title="Ir al inicio" action="#{Autenticador.indexLoggued()}" />
             </ui:define>
             
             <ui:define name="centro">
