--- a/coplime_client_web/web/users/cambiarContrasegna.xhtml
+++ b/coplime_client_web/web/users/cambiarContrasegna.xhtml
@@ -40,7 +40,7 @@
                             <p:commandButton value="Guardar cambios" action="#{cambioPassManagedBeans.guardarPass()}" update="msj_error_cambioContrasegna"/>
                             <p:commandButton value="Cancelar" action="#{cambioPassManagedBeans.goToInfoUsuario()}"/>
                         </f:facet>
-                    </p:panelGrid>>
+                    </p:panelGrid>
                     <p:growl id="msj_error_cambioContrasegna"/>
                 </h:form>
                 <p:contextMenu beforeShow="pcontext.show()" />
