--- a/coplime_client_web/web/enviarAvisoIncidencia.xhtml
+++ b/coplime_client_web/web/enviarAvisoIncidencia.xhtml
@@ -5,7 +5,8 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      contentType="text/html">
+      contentType="text/html"
+      xmlns:ezcomp="http://java.sun.com/jsf/composite/ezcomp">
 
     <body>
 
@@ -16,8 +17,8 @@
             </ui:define>
             
             <ui:define name="botonesBarra">
-                <p:commandButton styleClass="btn-menu-superior" value="  " title="Ir al inicio" icon="back" action="#{Autenticador.goToIndex()}" />
-                <p:commandButton styleClass="btn-menu-superior" value="  " title="Seleccionar punto limpio" icon="back" action="#{Autenticador.goToEnviarAvisoIncidencia()}" />
+                <ezcomp:boton_barra_superior classIcon="ui-icon-home" title="Ir al inicio" action="#{Autenticador.goToIndex()}" />
+                <ezcomp:boton_barra_superior classIcon="ui-icon-back" title="Seleccionar punto limpio" action="#{Autenticador.goToEnviarAvisoIncidencia()}" />
             </ui:define>
             
             <ui:define name="centro">
