--- a/coplime_client_web/web/users/infoUsuario.xhtml
+++ b/coplime_client_web/web/users/infoUsuario.xhtml
@@ -17,7 +17,7 @@
             </ui:define>
             
             <ui:define name="botonesBarra">
-                <ezcomp:boton_barra_superior classIcon="ui-icon-bars" title="Ir al inicio" action="#{Autenticador.indexLoggued()}" />
+                <ezcomp:boton_barra_superior classIcon="ui-icon-home" title="Ir al inicio" action="#{Autenticador.indexLoggued()}" />
             </ui:define>
             
             <ui:define name="centro">
