ver detalles de notificación casi listo

--- a/coplime_client_web/web/pobladoInicial.xhtml
+++ b/coplime_client_web/web/pobladoInicial.xhtml
@@ -19,7 +19,7 @@
                     <p:panelGrid columns="1" styleClass="centrar">
                         <f:facet name="header">Realizar el poblado inicial del sistema</f:facet>
                         <f:attribute name="icon" value="false" />
-                        <p:outputLabel value="Actualmente se crean 3 usuarios (1 de cada tipo) y 1 punto limpio" />
+                        <p:outputLabel value="Actualmente se crean 3 usuarios (1 de cada tipo), 1 punto limpio y un aviso de incidencia" />
                         <f:facet name="footer">
                             <p:commandButton value="Poblar" action="#{pobladoInicial.poblar()}"/>
                         </f:facet>
