Agregada entidad "comuna"
Ahora existe el objeto "comuna" para representar las comunas de un punto
limpio en lugar de un String simplemente

--- a/coplime_client_web/web/admin/agregarPuntoLimpio.xhtml
+++ b/coplime_client_web/web/admin/agregarPuntoLimpio.xhtml
@@ -22,7 +22,7 @@
                         <p:outputLabel value="Seleccione comuna"/>
                         <h:selectOneMenu label="Seleccione comuna" value="#{MantenedorPuntoLimpioAgregar.comuna_seleccionada}">
                             <f:selectItems value="#{MantenedorPuntoLimpioAgregar.listaComunas}"  
-                                var="comuna" itemLabel="#{comuna}" itemValue="#{comuna}" />
+                                var="comuna" itemLabel="#{comuna.label}" itemValue="#{comuna.id}" />
                         </h:selectOneMenu>
                         
                         <p:outputLabel value="Dirección"/>
