CRUD de Operario mantención listo

--- a/coplime_client_web/web/users/verDetallesInspector.xhtml
+++ b/coplime_client_web/web/users/verDetallesInspector.xhtml
@@ -48,8 +48,8 @@
                          <p:outputLabel value="Nº de revisiones realizadas"/>
                          <p:inputText value="#{MantenedorInspectorVerDetalles.numRevisionesRealizadas}" disabled="true" readonly="true" />
                          
-                         <p:outputLabel value="Nº de solicitudes de rev. realizadas"/>
-                         <p:inputText value="#{MantenedorInspectorVerDetalles.numSolicitudesMantencionRealizadas}" disabled="true" readonly="true" />
+                         <p:outputLabel value="Nº de solicitudes de mant. realizadas"/>
+                         <p:inputText value="#{MantenedorInspectorVerDetalles.numSolicitudesMantencionesRealizadas}" disabled="true" readonly="true" />
                          <f:facet name="footer">
                             
                             <p:commandButton value="Volver" action="#{MantenedorInspectorVerDetalles.volver()}"/>                         
